--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/node": "^7.15.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.13"
   },
