--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
