--- a/server/package.json
+++ b/server/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/node": "^7.15.4",
+    "aws-sdk": "^2.1002.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.13",
-    "passport": "^0.5.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
